--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <p>yourdevilfriends.art © Bruno «devils» A.<br>
     2023-whenever</p>
-    <img src="/images/wiz.gif" alt="Decorative image">
+    <a href="#top"><img src="/images/wiz.gif" alt="Back to top"></a>
 </footer>
