--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,3 @@
-<header>
+<header id="top">
     <a href="/"><img src="/images/logo.gif" alt="yourdevilfriends.art" title="Return home?"></a>
 </header>
