--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-html { cursor: url(/cursor.cur), auto;}
+html { cursor: url(/cursor.cur), auto; min-height: 100%;}
 
 body {
     font-family: sans-serif;
