--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
-    {{ range .Pages }}
-    <article>
+    {{ range .Paginator.Pages }}
+    <article style="margin-bottom: 15px;">
+        {{ with .Params.featured_image }}
+            <img src="{{ . }}">
+        {{ end }}
         <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
         <h4><time>{{ .Date.Format "Jan 2, 2006" }}</time></h4>
         <p>{{ .Description }}</p>
@@ -15,4 +18,25 @@
         </h4>
     </article>
     {{ end }}
+    {{ $pag := $.Paginator }}
+        {{ if gt $pag.TotalPages 1 }}
+        <div aria-label="Page navigation">
+            <ul class="pagination">
+                {{ if $pag.HasPrev }}
+                <li class="page-item"><a href="{{ $pag.Prev.URL }}" rel="prev" class="page-link">&laquo; Prev</a></li>
+                {{ end }}
+                {{ range $pag.Pagers }}
+                {{ if eq . $pag }}
+                <li class="page-item active"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
+                {{ else }}
+                <li class="page-item"><a href="{{ .URL }}" class="page-link">{{ .PageNumber }}</a></li>
+                {{ end }}
+                {{ end }}
+
+                {{ if $pag.HasNext }}
+                <li class="page-item"><a href="{{ $pag.Next.URL }}" rel="next" class="page-link">Next &raquo;</a></li>
+                {{ end }}
+            </ul>
+    </div>
+{{ end }}
 {{ end }}
