--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,30 @@ article img {
     margin: auto;
 }
 
+.pagination {
+    display: flex;
+    list-style: none;
+    margin: 20px 0;
+    padding: 0;
+    justify-content: center;
+}
+
+.page-link {
+    position: relative;
+    display: block;
+    padding: 1rem;
+    margin-left: -1px;
+    line-height: 1.25;
+}
+
+.page-item.disabled .page-link {
+    color: #fff;
+    pointer-events: none;
+}
+
+.page-item.active .page-link {
+    z-index: 1;
+}
 
 @media only screen and (max-width: 600px) {
     main {
