--- a/css/gallery.css
+++ b/css/gallery.css
@@ -12,6 +12,10 @@ body {
     overflow-x: hidden;
 }
 
+h1, h2, h3 {
+    font-family: courier;
+}
+
 a {
     color: #ff0000;
     text-decoration: underline;
