--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,13 @@ footer {
     min-width: 270px;
 }
 
-#stamps {
-    text-align: center;
-    overflow: hidden;
-    height: 120px;
-    max-width: 100%;
-    margin-top: 50px;
-    margin-bottom: 30px;
+#linuxring {
+    margin-bottom: 20px;
+    height: 150px;
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 #notebook {
