--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ main article {
 /*ASIDE & WEBRINGS*/
 
 aside {
-    position: fixed;
+    position: absolute;
     top: 25px;
     left: 820px;
     text-align: center;
