--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ q {
     font-style: italic;
 }
 
+h1, h2, h3 {
+    background-image: linear-gradient(to right, #e91e63, #ffc107, #009688, #673ab7, #e91e63);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+
+}
+
 /*NAVIGATION SIDEBAR*/
 
 nav {
@@ -82,7 +90,8 @@ nav button {
     font-size: 1em;
     font-family: sans-serif;
     color: #fff;
-    text-shadow: 1px 1px #000, -1px -1px #000;
+    font-weight: bold;
+    text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;
     border: 1px solid #906639;
     background-size: cover;
 }
