We forgor to change the font family :'(

--- a/css/universal.css
+++ b/css/universal.css
@@ -6,6 +6,7 @@ body {
     background-position: center;
     background-color: #000;
     font-size: 1em;
+    font-family: serif;
     color: #f5f5f5;
 }
 
