--- a/css/universal.css
+++ b/css/universal.css
@@ -6,7 +6,7 @@ body {
     background-position: center;
     background-color: #000;
     font-size: 1em;
-    font-family: serif;
+    font-family: sans-serif;
     color: #f5f5f5;
 }
 
@@ -63,6 +63,10 @@ pre {
     color: #b2ec5d;
     padding: 15px;
     overflow: auto;
+}
+
+h1 {
+    font-size: 1.3em;
 }
 
 q {
