--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ article section {
     vertical-align: middle;
     display: inline-block;
     width: 181px;
+    margin-bottom: 5px;
 }
 
 #linuxring {
