--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ nav {
 
 nav button {
     text-align: center;
-    width: 91px;
+    width: 19.365%;
     padding: 10px;
     background-color: #000;
     font-family: sans-serif;
