--- a/style.css
+++ b/style.css
@@ -148,13 +148,17 @@ nav button:hover {
     color: #000;
 }
 
+.halves {
+    white-space: nowrap;
+}
+
 section {
     width: 47.5%;
     display: inline-block;
     vertical-align: top;
     font-size: .85em;
     margin-bottom: 10px;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 .box {
@@ -163,7 +167,6 @@ section {
     max-width: 100%;
     padding: 2px 10px;
     overflow: auto;
-    white-space: normal;
 }
 
 footer {
